--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <body>
     <!-- задача 1 -->
-    <h1> Exegi monumentum</h1>
+    <h1> Exegi monumentum 2</h1>
 
     <p>Я <b>памятник</b> себе воздвиг нерукотворный, <br> К нему не зарастет народная тропа,
         <br> Вознесся выше он главою непокорной <br> Александрийского столпа.</p>
